public/common/global.css
:root {
    --primary-bg: #f5f5f5;
    --secondary-bg: #e0e0e0;
    --page-bg: #1f1f1f;
    --card-bg: #ffffff;
    --primary-fg: #3a3434;
    --secondary-fg: #919191;
    --sidebar-fg: #ffffff;
    --sidebar-bg: #3a3434aa;
    --border-light: #afa7a1;
    --border-dark: #6e6a67;
    --accent-light: #e7b861;
    --accent-medium: #a26b04;
    --sunlight: #ffa60066;
    --accent-dark: #503116;
    --error-light: #df7362;
    --error-dark: #4c2923;
    --overlay-bg: #1f1f1fee;

    --login-border: #686868aa;
    --login-bg: #1f1f1fee;
    --login-field-bg: #3B383388;
    --login-field-fg: #989898;
    --login-hover-bg: #3b3b3bee;
    --success-light: #54c66d;

    --circle-radius: 50%;
    --button-radius: 96px;
    --container-radius: 48px;
    --card-radius: 24px;
    --secondary-card-radius: 18px;
    --input-field-radius: 8px;

    --card-shadow: 0px 0px 4px #00000011;

    --small-gap: 0.5rem;
    --medium-gap: 1rem;
    --big-gap: 2rem;
    
    --container-padding: 2rem 2.5rem;
    --card-padding: 1.25rem 2rem;
    --button-padding: 0.5rem 1rem;
    --sidebar-padding: 1.5rem;

    --top-bar-height: 4rem;

    --main-font: 'Space Grotesk', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    --icon-size: 1.2rem;
}

body {
    background-color: var(--page-bg);
    color: var(--primary-fg);
    font-family: var(--main-font);
    margin: var(--small-gap);
    display: flex;
    gap: var(--small-gap);
}

a {
    text-decoration: none;
}

.global-sidebar {
    background-color: var(--sidebar-bg);
    color: var(--sidebar-fg);
    flex: 30%;
    min-width: 280px;
    height: calc(100vh - var(--medium-gap));
    box-sizing: border-box;
    border-radius: var(--container-radius);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: var(--sidebar-padding);
    overflow-y: scroll;
}

.mobile-top-bar {
    display: none;
}

.sunlight {
    position: fixed;
    left: -8rem;
    width: 16rem;
    aspect-ratio: 1;
    background-color: var(--sunlight);
    filter: blur(52px);
    border-radius: var(--circle-radius);
    z-index: -5;
    pointer-events: none;
}

.logo-container {
    display: flex;
}

.logo {
    display: flex;
    align-items: center;
    gap: var(--medium-gap);
}

.logo-image {
    width: 5rem;
    height: 2rem;
    padding: var(--medium-gap);
    box-sizing: border-box;
    background-color: var(--sidebar-fg);
    border-radius: var(--button-radius);
}

.container {
    border-radius: var(--container-radius);
    padding: var(--container-padding);
    box-sizing: border-box;
}

.card {
    border-radius: var(--card-radius);
    padding: var(--card-padding);
    box-sizing: border-box;
    background-color: var(--card-bg);
    box-shadow: var(--card-shadow);
}

.card-title {
    font-size: 1.1rem;
    font-weight: 600;
}

.card-header {
    font-weight: 500;
}

.card-secondary {
    color: var(--secondary-fg);
}

.card-description-item {
    display: flex;
    align-items: center;
    gap: var(--small-gap);
    flex-direction: row;
}

.card-description-item i {
    font-size: var(--icon-size);
    color: var(--secondary-fg);
}

.team-member-card {
    background-color: transparent;
    box-shadow: inset 0 0 0 1px var(--border-dark);
}

.team-member-card[data-role="Manager"] {
    background-color: var(--page-bg);
    color: var(--sidebar-fg);
}

.team-member-mini-card {
    display: flex;
    align-items: center;
    justify-content: center;
    border: none;
    border-radius: var(--button-radius);
    background-color: var(--primary-bg);
    padding: var(--button-padding);
    display: flex;
    flex-direction: row;
    gap: var(--small-gap);
    font-family: var(--main-font);
    cursor: pointer;
    transition: background-color 0.15s, color 0.15s;
    text-wrap: nowrap;
}

.team-member-mini-card:hover {
    background-color: var(--secondary-bg);
}

.team-member-mini-picture {
    height: 100%;
    aspect-ratio: 1;
    background-color: var(--page-bg);
    border-radius: var(--circle-radius);
}

.team-member-mini-card #full-name {
    font-size: 0.8rem;
}

.team-member-mini-card #teamMiniRemoveButton {
    display: none;
}

.team-member-mini-card #teamMiniAddButton {
    display: block;
}

.selected-team-member {
    background-color: var(--accent-light);
}

.selected-team-member:hover {
    background-color: var(--accent-light);
}

.selected-team-member #teamMiniRemoveButton {
    display: block;
}

.selected-team-member #teamMiniAddButton {
    display: none;
}

.header {
    font-family: var(--main-font);
    letter-spacing: 4px;
    text-transform: uppercase;
    font-size: 1.2rem;
    margin: 0;
}

.secondary-header {
    font-family: var(--main-font);
    letter-spacing: 2px;
    text-transform: uppercase;
    font-size: 1rem;
    color: var(--secondary-fg);
    margin: 0;
}

.text-field-container {
    display: flex;
    flex-direction: column;
    gap: var(--small-gap);
    width: 100%;
}

.text-field:focus {
    outline: 1px var(--border-dark) solid;
}

.field-label {
    font-size: 0.8rem;
}

.text-field {
    box-shadow: inset 0 0 0 1px var(--border-dark);
    border: none;
    padding: 0.5rem 1rem;
    border-radius: var(--input-field-radius);
    font-family: var(--main-font);
    font-size: 0.8rem;
    color: var(--primary-fg);
    flex: 1;
}

.image {
    background-color: var(--card-bg);
    border-radius: var(--circle-radius);
}

.nav-link-section {
    display: flex;
    flex-direction: column;
    gap: var(--small-gap);
    display: flex;
    flex-direction: column;
    gap: var(--small-gap);
    list-style: none;
    padding-left: 0;
}​

.nav-link-wrapper {
    text-decoration: none;
}
/* ... */

